improve about me section and aesthetics work

--- a/about.html
+++ b/about.html
@@ -86,28 +86,10 @@
               A junior front-end developer based in Swizerland
             </h2>
             <p class="about-me-text">
-              Originally from Barcelona, I have always been an unusually
-              imaginative and curious person. Being the latter the reason why I
-              moved to Switzerland to pursue a PhD in Chemistry. It was then
-              when I started to explore the digital media as means of creation,
-              being always extremely enthusiastic whenever I had to use Adobe
-              Illustrator to create images that could visually explain in an
-              intuitive way the scientific advances we were doing.
-              <br /><br />
-              During a needed break following my studies, I realised how much I
-              had craved creativity during the last few years. I then discovered
-              the art of crafting aesthetically pleasing and accessible
-              webpages, visual essays and storytelling. I was amazed by the work
-              of numerous front-end developers and webdesigners.
-              <em>I would love to do that!</em> I told myself.
-              <em>What is stoping you?</em> I answered. Not knowing how to do it
-              being the only reasonable answer I could give, I decided to take a
-              leap and do with my life whatever makes me happy. <br /><br />
-              I am now forming myself as a front-end developer, feeling at ease
-              with the coding logics and the idea of constantly changing
-              languages! I am looking forward to growing as a developer,
-              learning from my peers and slowly but surely becoming able of
-              creating webpages as inspiring as the ones that got me here!
+              I’m currently seeking new opportunities in front-end development.
+              I’m open to work onsite and remotely. I’m highly skilled in
+              JavaScript and React. <br />Originally from Barcelona, after
+              having studied in Switzerland I am now established in Geneva.
             </p>
             <div class="intro-links mt-4">
               <a
@@ -119,7 +101,7 @@
           </div>
           <div class="col d-none d-lg-block">
             <img
-              src="images/kyototree.jpg"
+              src="images/laia.jpeg"
               alt="Picture of a beautiful tree I took in Kyoto, Japan"
               class="img-fluid"
             />
@@ -127,15 +109,16 @@
         </div>
       </div>
       <div id="contact">
-        <h2 class="secondary-title mt-5">My skillset</h2>
+        <h2 class="secondary-title">My skillset</h2>
         <p class="about-me-text">
-          Front-end dev: HTML, CSS, JS, API, Bootstrap, Hosting, Flexbox, SEO,
-          Responsive<br />
+          VsCode, MacOS, GitHub <br />Front-end dev: React, JS, Bootstrap,
+          Responsive development<br />
           Web design: Figma, Adobe Illustrator, Affinity Designer 2, Procreate
           <br />
           You can talk to me in: English, French, Spanish & Catalan. I am
           currently learning Japanese(A2.1)
         </p>
+
         <h2 class="secondary-title mt-5">Let's get in touch!</h2>
         <p class="about-me-text">
           I'm currently looking for my first job opportunity as a front-end
@@ -148,19 +131,21 @@
         <div class="footer">
           <h2 class="email">lcastillaiamoros@gmail.com</h2>
           <div class="social-media">
-            <a href="https://github.com/Aylhenia" target="_blank">
+            <a
+              href="https://github.com/Aylhenia"
+              title="My GitHub"
+              target="_blank"
+            >
               <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
             ></a>
             <a
               href="https://www.linkedin.com/in/laia-castilla-i-amor%C3%B3s-239a51188/"
+              title="My Linkedin"
               target="_blank"
               ><i class="fa-brands fa-linkedin icon" style="color: #4cb0e1"></i
             ></a>
-            <a href="mailto:lcastillaiamoros@gmail.com"
+            <a href="mailto:lcastillaiamoros@gmail.com" title="Send me an email"
               ><i class="fa-solid fa-envelope icon" style="color: #4cb0e1"></i
-            ></a>
-            <a href="https://www.instagram.com/laiacastilla/" targett="_blank"
-              ><i class="fa-brands fa-instagram icon" style="color: #4cb0e1"></i
             ></a>
           </div>
         </div>
@@ -168,13 +153,13 @@
     </div>
     <footer>
       <div class="signature">
-        Designed and coded by
+        Designed and
         <a
           href="https://github.com/Aylhenia/portfolio-project"
           title="Portfolio's repository"
           target="_blank"
-          >LCA</a
-        >
+          >open-sourced </a
+        >coded by Laia
       </div>
     </footer>
   </body>
