--- a/index.html
+++ b/index.html
@@ -105,22 +105,16 @@
           <a href="mailto:lcastillaiamoros@gmail.com" title="Send me an email"
             ><i class="fa-solid fa-envelope icon" style="color: #4cb0e1"></i
           ></a>
-          <a
-            href="https://www.instagram.com/laiacastilla/"
-            title="My Instagram account"
-            target="_blank"
-            ><i class="fa-brands fa-instagram icon" style="color: #4cb0e1"></i
-          ></a>
         </div>
         <footer>
           <div class="signature">
-            Designed and coded by
+            Designed and
             <a
               href="https://github.com/Aylhenia/portfolio-project"
               title="Portfolio's repository"
               target="_blank"
-              >LCA</a
-            >
+              >open-sourced </a
+            >coded by Laia
           </div>
         </footer>
       </div>
