--- a/work.html
+++ b/work.html
@@ -103,7 +103,18 @@
                   class="launch-link"
                   target="_blank"
                   title="Check out the weather in your city!"
-                  >Launch Weather App</a
+                  ><i class="fa-regular fa-window-restore"></i> Launch</a
+                >
+              </div>
+              <div class="btn">
+                <a
+                  href="https://github.com/Aylhenia/Vanilla-Weather-App"
+                  class="launch-link"
+                  target="_blank"
+                  title="Check out the code"
+                >
+                  <i class="fa-solid fa-code code-icon"></i>
+                  Code</a
                 >
               </div>
             </div>
@@ -134,7 +145,18 @@
                   class="launch-link"
                   target="_blank"
                   title="Check out this world clock application"
-                  >Launch World Clock App</a
+                  ><i class="fa-regular fa-window-restore"></i> Launch</a
+                >
+              </div>
+              <div class="btn">
+                <a
+                  href="https://github.com/Aylhenia/World-Clock-Project"
+                  class="launch-link"
+                  target="_blank"
+                  title="Check out the code"
+                >
+                  <i class="fa-solid fa-code code-icon"></i>
+                  Code</a
                 >
               </div>
             </div>
@@ -167,7 +189,18 @@
                   class="launch-link"
                   target="_blank"
                   title="Visit this drawing application"
-                  >Launch</a
+                  ><i class="fa-regular fa-window-restore"></i> Launch</a
+                >
+              </div>
+              <div class="btn">
+                <a
+                  href="https://github.com/Aylhenia/Yakushima-project"
+                  class="launch-link"
+                  target="_blank"
+                  title="Check out the code"
+                >
+                  <i class="fa-solid fa-code code-icon"></i>
+                  Code</a
                 >
               </div>
             </div>
@@ -198,7 +231,18 @@
                   class="launch-link"
                   target="_blank"
                   title="Check out this world clock application"
-                  >Launch</a
+                  ><i class="fa-regular fa-window-restore"></i> Launch</a
+                >
+              </div>
+              <div class="btn">
+                <a
+                  href="https://github.com/Aylhenia/react-weather-app"
+                  class="launch-link"
+                  target="_blank"
+                  title="Check out the code"
+                >
+                  <i class="fa-solid fa-code code-icon"></i>
+                  Code</a
                 >
               </div>
             </div>
@@ -227,7 +271,18 @@
                   class="launch-link"
                   target="_blank"
                   title="Visit this drawing application"
-                  >Launch</a
+                  ><i class="fa-regular fa-window-restore"></i> Launch</a
+                >
+              </div>
+              <div class="btn">
+                <a
+                  href="https://github.com/Aylhenia/dictionary-project"
+                  class="launch-link"
+                  target="_blank"
+                  title="Check out the code"
+                >
+                  <i class="fa-solid fa-code code-icon"></i>
+                  Code</a
                 >
               </div>
             </div>
@@ -244,32 +299,34 @@
         >
         <h2 class="email mt-3">lcastillaiamoros@gmail.com</h2>
         <div class="social-media">
-          <a href="https://github.com/Aylhenia" target="_blank">
+          <a
+            href="https://github.com/Aylhenia"
+            title="My GitHub"
+            target="_blank"
+          >
             <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/laia-castilla-i-amor%C3%B3s-239a51188/"
+            title="My Linkedin"
             target="_blank"
             ><i class="fa-brands fa-linkedin icon" style="color: #4cb0e1"></i
           ></a>
-          <a href="mailto:lcastillaiamoros@gmail.com"
+          <a href="mailto:lcastillaiamoros@gmail.com" title="Send me an email"
             ><i class="fa-solid fa-envelope icon" style="color: #4cb0e1"></i
-          ></a>
-          <a href="https://www.instagram.com/laiacastilla/" targett="_blank"
-            ><i class="fa-brands fa-instagram icon" style="color: #4cb0e1"></i
           ></a>
         </div>
       </div>
     </div>
     <footer>
       <div class="signature">
-        Designed and coded by
+        Designed and
         <a
           href="https://github.com/Aylhenia/portfolio-project"
           title="Portfolio's repository"
           target="_blank"
-          >LCA</a
-        >
+          >open-sourced </a
+        >coded by Laia
       </div>
     </footer>
   </body>
