fix text and contact redirection

--- a/work.html
+++ b/work.html
@@ -64,7 +64,7 @@
             <a class="nav-link active" href="/work.html" title="Portfolio"
               >Work</a
             >
-            <a class="nav-link" href="/about.html#contact" title="Contact me"
+            <a class="nav-link" href="/about.html#contact-me" title="Contact me"
               >Contact</a
             >
           </div>
