--- a/about.html
+++ b/about.html
@@ -66,7 +66,10 @@
               >About</a
             >
             <a class="nav-link" href="/work.html" title="Portfolio">Work</a>
-            <a class="nav-link" href="/about.html#contact" title="Contact Laia"
+            <a
+              class="nav-link"
+              href="/about.html#contact-me"
+              title="Contact Laia"
               >Contact</a
             >
           </div>
@@ -87,9 +90,10 @@
             </h2>
             <p class="about-me-text">
               I’m currently seeking new opportunities in front-end development.
-              I’m open to work onsite and remotely. I’m highly skilled in
-              JavaScript and React. <br />Originally from Barcelona, after
-              having studied in Switzerland I am now established in Geneva.
+              I’m open to work onsite and remotely. I’m skilled in JavaScript
+              and React and constantly learning. <br />Originally from
+              Barcelona, after having studied in Switzerland I am now
+              established in Geneva.
             </p>
             <div class="intro-links mt-4">
               <a
@@ -119,7 +123,9 @@
           currently learning Japanese(A2.1)
         </p>
 
-        <h2 class="secondary-title mt-5">Let's get in touch!</h2>
+        <h2 class="secondary-title mt-5" id="contact-me">
+          Let's get in touch!
+        </h2>
         <p class="about-me-text">
           I'm currently looking for my first job opportunity as a front-end
           developer so I'm very excited about getting involved in new projects.
