--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <a class="nav-link" href="/work.html" title="Portfolio">Work</a>
               <a
                 class="nav-link"
-                href="/about.html#contact"
+                href="/about.html#contact-me"
                 title="Contact Laia"
                 >Contact</a
               >
