--- a/about.html
+++ b/about.html
@@ -90,8 +90,7 @@
             </h2>
             <p class="about-me-text">
               I’m currently seeking new opportunities in front-end development.
-              I’m open to work onsite and remotely. I’m skilled in JavaScript
-              and React and constantly learning. <br />Originally from
+              I’m open to work onsite and remotely. Trained in React, I am always trying to deepen my knowledge and expand my programming skills. <br />Originally from
               Barcelona, after having studied in Switzerland I am now
               established in Geneva.
             </p>
