added CV and updated linkedin

--- a/about.html
+++ b/about.html
@@ -90,16 +90,27 @@
             </h2>
             <p class="about-me-text">
               I’m currently seeking new opportunities in front-end development.
-              I’m open to work onsite and remotely. Trained in React, I am always trying to deepen my knowledge and expand my programming skills. <br />Originally from
-              Barcelona, after having studied in Switzerland I am now
-              established in Geneva.
+              I’m open to work onsite and remotely. Trained in React, I am
+              always trying to deepen my knowledge and expand my programming.
+              <br />Originally from Barcelona, after having studied in
+              Switzerland I am now established in Geneva.
             </p>
-            <div class="intro-links mt-4">
-              <a
-                href="/work.html"
-                class="link me-3 work hover-underline-animation"
-                >see my projects</a
-              >
+            <div class="about-me-links">
+              <span class="intro-links mt-4">
+                <a
+                  href="/work.html"
+                  class="link me-3 work hover-underline-animation"
+                  >see my projects</a
+                >
+              </span>
+              <span class="intro-links mt-4">
+                <a
+                  href="/images/CV-LaiaCastilla.pdf"
+                  class="link me-3 work hover-underline-animation"
+                  target="_blank"
+                  >see my CV</a
+                >
+              </span>
             </div>
           </div>
           <div class="col d-none d-lg-block">
@@ -144,7 +155,7 @@
               <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
             ></a>
             <a
-              href="https://www.linkedin.com/in/laia-castilla-i-amor%C3%B3s-239a51188/"
+              href="https://www.linkedin.com/in/laia-castilla-i-amorós-phd/"
               title="My Linkedin"
               target="_blank"
               ><i class="fa-brands fa-linkedin icon" style="color: #4cb0e1"></i
