--- a/work.html
+++ b/work.html
@@ -307,7 +307,7 @@
             <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
           ></a>
           <a
-            href="https://www.linkedin.com/in/laia-castilla-i-amor%C3%B3s-239a51188/"
+            href="https://www.linkedin.com/in/laia-castilla-i-amorós-phd/"
             title="My Linkedin"
             target="_blank"
             ><i class="fa-brands fa-linkedin icon" style="color: #4cb0e1"></i
